--- a/dev/index.html
+++ b/dev/index.html
@@ -18,6 +18,8 @@
 
 <body>
 	<main></main>
+	<!-- <script src="/q5.js"></script> -->
+
 	<script src="/src/q5-core.js"></script>
 	<script src="/src/q5-canvas.js"></script>
 	<script src="/src/q5-2d-canvas.js"></script>
