--- a/home/index.html
+++ b/home/index.html
@@ -82,7 +82,7 @@ function setup() {
 		<md id="md2-0">
 <h2 id="blazing-fast-🚀">Blazing fast! 🚀</h2>
 <p>q5 is performance optimized for the modern web. Create interactive art that runs in real-time on more devices than ever before. 🏎️</p>
-<p><a href="https://github.com/q5js/q5.js/wiki/Developer-Log#q5js-webgpu-is-16x-faster-than-p5js-webgl--july-25-2024" target="_blank">Draw 16x more</a> per frame with <a href="https://developer.mozilla.org/docs/Web/API/WebGPU_API" target="_blank">q5 WebGPU</a>, compared to the limit of p5 WebGL. Or save battery by getting the same results with less power consumption. 🌱</p>
+<p><a href="https://github.com/q5js/q5.js/wiki/Developer-Log" target="_blank">Draw up to 32x more</a> per frame with <a href="https://developer.mozilla.org/docs/Web/API/WebGPU_API" target="_blank">q5 WebGPU</a>, compared to the limits of p5. Or save battery by getting the same results with less power consumption. 🌱</p>
 </md>
 		<script type="mie/q5" id="rainbowLoops" renderer="webgpu" hide-editor="">
 let size;
