--- a/learn/index.html
+++ b/learn/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>q5 : Learn</title>
 	<link rel="icon" href="/q5js_logo.webp">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Tezumie/aijs-mini-editor@latest/mini-editor.css">
 	<link rel="stylesheet" type="text/css" href="docs.css" />
 </head>
 
