--- a/learn/index.html
+++ b/learn/index.html
@@ -30,18 +30,13 @@
 		<main id="content" class="fade-in" style="scroll-behavior: auto;"></main>
 	</div>
 
+	<script src="/q5.js"></script>
+
 	<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/split.js/1.6.2/split.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.33.0/min/vs/loader.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/gh/Tezumie/aijs-mini-editor@latest/mini-editor.js"></script>
-	<script>
-		//configuration
-		window.docsConfig = {
-			// theme: "dark",
-			// url: "https://github.com/your-repo",
-			// logo: "https://your-logo",
-		}
-	</script>
+
 	<script src="docs.js"></script>
 </body>
 
