--- a/home/index.html
+++ b/home/index.html
@@ -260,7 +260,6 @@ createCanvas(400, 400);
 <p>Use q5.js in your own project by adding this line to your HTML file:</p>
 <pre><code class="language-html">&lt;script src="https://q5js.org/q5.js"&gt;&lt;/script&gt;
 </code></pre>
-<p>Full documentation is coming soon, for now see q5's <a href="https://github.com/q5js/q5.js" target="_blank">GitHub README</a>.</p>
 </md>
 		<md id="md11-1">
 <h2 id="join-our-community-🤝">Join our community 🤝</h2>
@@ -272,7 +271,7 @@ createCanvas(400, 400);
 		<md id="md20-0">
 <h2 id="credits-🌟">Credits 🌟</h2>
 <p>This project aims to be the spiritual successor to the invaluable work done by <a href="https://benfry.com" target="_blank">Ben Fry</a> and <a href="https://x.com/REAS" target="_blank">Casey Reas</a> on Java <a href="https://processingfoundation.org/" target="_blank">Processing</a>, <a href="http://lauren-mccarthy.com" target="_blank">Lauren McCarthy</a>'s work on <a href="https://p5js.org" target="_blank">p5.js</a>, and all contributors to these projects.</p>
-<p>The original <a href="https://github.com/LingDong-/q5xjs" target="_blank">q5xjs (v0)</a> was created by <a href="https://github.com/LingDong-" target="_blank">@LingDong~</a> and released under the public domain Unlicense license. We forked and significantly extended his brilliant codebase!</p>
+<p>The original <a href="https://github.com/LingDong-/q5xjs" target="_blank">q5xjs (v0)</a> was created by <a href="https://github.com/LingDong-" target="_blank">@LingDong~</a> and released under the public domain Unlicense license. We forked and significantly extended his codebase.</p>
 <p>q5.js v2 is open source under the LGPLv3, created and actively maintained by the q5 team: <a href="https://github.com/quinton-ashley" target="_blank">@quinton-ashley</a> and <a href="https://github.com/Tezumie" target="_blank">@Tezumie</a>.</p>
 </md>
 	</div>
