--- a/dev/index.html
+++ b/dev/index.html
@@ -18,7 +18,7 @@
 
 <body>
 	<main></main>
-	<!-- <script src="/q5.js"></script> -->
+	<!-- <script src="https://q5js.org/q5.js"></script> -->
 
 	<script src="/src/q5-core.js"></script>
 	<script src="/src/q5-canvas.js"></script>
@@ -44,6 +44,8 @@
 	<!-- <script src="/src/q5-2d-soft-filters.js"></script> -->
 	<!-- <script src="/src/q5-noisier.js"></script> -->
 	<!-- <script src="/src/q5-sensors.js"></script> -->
+
+	<!-- <script src="https://cdn.jsdelivr.net/npm/p5.capture"></script> -->
 
 	<script src="test.js"></script>
 </body>
