--- a/dev/p5.html
+++ b/dev/p5.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
 	<title>p5.js testing</title>
-	<link rel="icon" href="https://p5js.org/assets/img/favicon.ico" />
+	<link rel="icon" href="https://p5js.org/favicon.ico" />
 	<style>
 		html,
 		body {
@@ -20,6 +20,8 @@
 	<main></main>
 	<script src="https://cdn.jsdelivr.net/npm/p5@1/lib/p5.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/p5@1/lib/addons/p5.sound.min.js"></script>
+	<!-- <script src="https://cdn.jsdelivr.net/npm/p5.capture"></script> -->
+
 	<script src="test.js"></script>
 </body>
 
