--- a/home/index.html
+++ b/home/index.html
@@ -23,7 +23,7 @@
 		<div id="navLinks">
 			<a href="../learn">📖&nbsp;Learn</a>
 			<a href="../demos">⭐️&nbsp;Demos</a>
-			<a href="https://patreon.com/p5play">💙&nbsp;Donate</a>
+			<a href="https://discord.gg/QuxQYwGWuB">💙&nbsp;Join</a>
 		</div>
 	</nav>
 	<div id="reel0" class="reel">
@@ -42,7 +42,7 @@
 <h2 id="a-sequel-to-p5js-🎉">A sequel to p5.js! 🎉</h2>
 <p><strong>q5.js</strong> is a spiritual successor to the <a href="https://p5js.org" target="_blank">p5.js</a> and <a href="https://processing.org/" target="_blank">Processing Java</a> graphics libraries.</p>
 <p>The q5 team aims to make creative coding even more fun and accessible for a new generation of artists, designers, educators, and beginners!</p>
-<p>If you're already familiar with p5, you'll find yourself right at home with q5. It's also compatible with popular addons, including <a href="https://p5js.org/reference/#/libraries/p5.sound" target="_blank">p5.sound</a> and <a href="https://p5play.org" target="_blank">p5play</a>.</p>
+<p>If you're already familiar with p5, you'll find yourself right at home with q5. It's also compatible with popular addons, including <a href="https://p5js.org/reference/#/libraries/p5.sound" target="_blank">p5.sound</a>, <a href="https://github.com/tapioca24/p5.capture" target="_blank">p5.capture</a>, and <a href="https://p5play.org" target="_blank">p5play</a>.</p>
 </md>
 		<div class="minis horiz">
 			<script type="mie/p5" id="p5.js" horiz="" width="350px">
@@ -263,8 +263,9 @@ createCanvas(400, 400);
 </md>
 		<md id="md11-1">
 <h2 id="join-our-community-🤝">Join our community 🤝</h2>
-<p>The future of creative coding is here! Join us on the <a href="https://discord.gg/QuxQYwGWuB" target="_blank">q5 community Discord</a>. 🗺️</p>
-<p>If you'd like to work on q5.js, check out our <a href="https://github.com/orgs/q5js/projects/1/views/1" target="_blank">Project Planning Board</a>.</p>
+<p>The future of creative coding is here! Join us on the <a href="https://discord.gg/QuxQYwGWuB" target="_blank">q5 community Discord</a>. 🙋</p>
+<p>Support the development of q5 on <a href="https://www.patreon.com/c/p5play" target="_blank">Patreon</a>. 💙</p>
+<p>If you'd like to work on q5, check out our <a href="https://github.com/orgs/q5js/projects/1/views/1" target="_blank">Project Planning Board</a>. 🧑‍💻</p>
 </md>
 	</div>
 	<div id="reel20" class="reel">
@@ -369,12 +370,6 @@ createCanvas(400, 400);
 	<script src="https://cdn.jsdelivr.net/npm/ace-builds@1.34.2/src-min-noconflict/ext-beautify.js"></script>
 	<script src="main.js"></script>
 	<script src="/home/mie.js"></script>
-
-
-
-
-
-
 
 
 
