--- a/home/index.html
+++ b/home/index.html
@@ -368,8 +368,13 @@ createCanvas(400, 400);
 	<script src="https://cdn.jsdelivr.net/npm/ace-builds@1.34.2/src-min-noconflict/ace.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/ace-builds@1.34.2/src-min-noconflict/ext-language_tools.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/ace-builds@1.34.2/src-min-noconflict/ext-beautify.js"></script>
-	<script src="main.js"></script>
+	<script>
+		window.mie = {
+			autoLoad: false
+		};
+	</script>
 	<script src="/home/mie.js"></script>
+	<script src="main.js"></script>
 
 
 
