--- a/home/index.html
+++ b/home/index.html
@@ -22,7 +22,7 @@
 		</a>
 		<div id="navLinks">
 			<a href="../learn">📖&nbsp;Learn</a>
-			<a href="../demos">⭐️&nbsp;Demos</a>
+			<a href="https://aijs.io/explore?query=q5">⭐️&nbsp;Demos</a>
 			<a href="https://discord.gg/QuxQYwGWuB">💙&nbsp;Join</a>
 		</div>
 	</nav>
