--- a/learn/index.html
+++ b/learn/index.html
@@ -14,7 +14,7 @@
 	<header>
 		<div class="header-container">
 			<button id="toggleNavButton" class="toggle-nav-button"></button>
-			<button id="homeButton" class="home-button"></button>
+			<a href="../home"><button id="homeButton" class="home-button"></button></a>
 			<div class="input-wrapper search-bar">
 				<span class="magnify-glass"></span>
 				<input autocomplete="off" type="text" id="listSearch" class="dialog-input" placeholder="Search">
