--- a/dev/index.html
+++ b/dev/index.html
@@ -31,6 +31,7 @@
 	<script src="/src/q5-display.js"></script>
 	<script src="/src/q5-input.js"></script>
 	<script src="/src/q5-math.js"></script>
+	<script src="/src/q5-record.js"></script>
 	<script src="/src/q5-sound.js"></script>
 	<script src="/src/q5-util.js"></script>
 	<script src="/src/q5-vector.js"></script>
