--- a/dev/index.html
+++ b/dev/index.html
@@ -48,7 +48,7 @@
 
 	<!-- <script src="https://cdn.jsdelivr.net/npm/p5.capture"></script> -->
 
-	<script src="test.js"></script>
+	<script src="sketch.js"></script>
 </body>
 
 </html>
