--- a/dev/p5.html
+++ b/dev/p5.html
@@ -22,7 +22,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/p5@1/lib/addons/p5.sound.min.js"></script>
 	<!-- <script src="https://cdn.jsdelivr.net/npm/p5.capture"></script> -->
 
-	<script src="test.js"></script>
+	<script src="sketch.js"></script>
 </body>
 
 </html>
