--- a/learn/index.html
+++ b/learn/index.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>q5 : Learn</title>
 	<link rel="icon" href="/q5js_logo.webp">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Tezumie/aijs-mini-editor@latest/mini-editor.css">
 	<link rel="stylesheet" type="text/css" href="docs.css" />
 </head>
 
@@ -14,7 +13,8 @@
 	<header>
 		<div class="header-container">
 			<button id="toggleNavButton" class="toggle-nav-button"></button>
-			<a href="../home"><button id="homeButton" class="home-button"></button></a>
+			<a href="../home"><button id="homeButton" class="home-button"><img class="logo" src="/q5js_icon.png"
+						alt=""></button></a>
 			<div class="input-wrapper search-bar">
 				<span class="magnify-glass"></span>
 				<input autocomplete="off" type="text" id="listSearch" class="dialog-input" placeholder="Search">
@@ -33,9 +33,8 @@
 	<script src="/q5.js"></script>
 
 	<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/split.js/1.6.2/split.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.33.0/min/vs/loader.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/gh/Tezumie/aijs-mini-editor@latest/mini-editor.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.52.0/min/vs/loader.min.js"></script>
+	<script src="mini-editor.js"></script>
 
 	<script src="docs.js"></script>
 </body>
