--- a/learn/index.html
+++ b/learn/index.html
@@ -12,9 +12,13 @@
 <body class="dark">
 	<header>
 		<div class="header-container">
-			<button id="toggleNavButton" class="toggle-nav-button"></button>
-			<a href="../home"><button id="homeButton" class="home-button"><img class="logo" src="/q5js_icon.png"
-						alt=""></button></a>
+			<button id="toggleNavButton"></button>
+			<a href="../home">
+				<button id="homeButton">
+					<img class="logo" src="/assets/q5js_icon-light.png" alt="">
+					<img class="brand" src="/assets/q5js_brand-light.webp">
+				</button>
+			</a>
 			<div class="input-wrapper search-bar">
 				<span class="magnify-glass"></span>
 				<input autocomplete="off" type="text" id="listSearch" class="dialog-input" placeholder="Search">
