--- a/home/index.html
+++ b/home/index.html
@@ -41,8 +41,8 @@
 		<md id="md1-0">
 <h2 id="a-sequel-to-p5js-🎉">A sequel to p5.js! 🎉</h2>
 <p><strong>q5.js</strong> is a spiritual successor to the <a href="https://p5js.org" target="_blank">p5.js</a> and <a href="https://processing.org/" target="_blank">Processing Java</a> graphics libraries.</p>
-<p>The q5 team aims to make creative coding even more fun and accessible for a new generation of artists, designers, educators, and beginners!</p>
-<p>If you're already familiar with p5, you'll find yourself right at home with q5. It's also compatible with popular addons, including <a href="https://p5js.org/reference/#/libraries/p5.sound" target="_blank">p5.sound</a>, <a href="https://github.com/tapioca24/p5.capture" target="_blank">p5.capture</a>, and <a href="https://p5play.org" target="_blank">p5play</a>.</p>
+<p>q5 was designed to make creative coding fun and accessible for a new generation of artists, designers, educators, and beginners!</p>
+<p>If you're already familiar with p5, you'll find yourself right at home with q5. It's also compatible with popular addons, including <a href="https://p5js.org/reference/#/libraries/p5.sound" target="_blank">p5.sound</a> and <a href="https://p5play.org" target="_blank">p5play</a>.</p>
 </md>
 		<div class="minis horiz">
 			<script type="mie/p5" id="p5.js" horiz="" width="350px">
