--- a/home/index.html
+++ b/home/index.html
@@ -39,9 +39,9 @@
 	</div>
 	<div id="reel1" class="reel">
 		<md id="md1-0">
-<h2 id="a-sequel-to-p5js-🎉">A sequel to p5.js! 🎉</h2>
+<h2 id="create-art-with-q5js-🎨">Create art with q5.js! 🎨</h2>
 <p><strong>q5.js</strong> is a spiritual successor to the <a href="https://p5js.org" target="_blank">p5.js</a> and <a href="https://processing.org/" target="_blank">Processing Java</a> graphics libraries.</p>
-<p>q5 was designed to make creative coding fun and accessible for a new generation of artists, designers, educators, and beginners!</p>
+<p>It was designed to make creative coding fun and accessible for a new generation of artists, designers, educators, and beginners.</p>
 <p>If you're already familiar with p5, you'll find yourself right at home with q5. It's also compatible with popular addons, including <a href="https://p5js.org/reference/#/libraries/p5.sound" target="_blank">p5.sound</a> and <a href="https://p5play.org" target="_blank">p5play</a>.</p>
 </md>
 		<div class="minis horiz">
@@ -118,7 +118,30 @@ function draw() {
 	</div>
 
 	<div id="reel3" class="reel">
-		<md id="md3-0">
+		<div class="minis horiz">
+			<md id="md3-0">
+<h2 id="start-coding-💻">Start coding! 💻</h2>
+<p>No installation required! Use an online code editor with one of these q5.js template projects: <a href="https://openprocessing.org/sketch/2471587" target="_blank">OpenProcessing</a>, <a href="https://aijs.io/editor?user=quinton-ashley&amp;project=logoSpin" target="_blank">Aijs</a>, or <a href="https://codepen.io/qashto/pen/jENEJNy" target="_blank">CodePen</a>. 🖌️</p>
+</md>
+			<md id="md3-1">
+<h2 id="join-our-community-🤝">Join our community 🤝</h2>
+<p>The future of creative coding is here! Join us on the <a href="https://discord.gg/QuxQYwGWuB" target="_blank">q5 community Discord</a>. 🙋</p>
+</md>
+			<md id="md3-2">
+<h2 id="local-development-🛠️">Local development 🛠️</h2>
+<p>You can <a href="https://github.com/q5js/q5.js/wiki/Get-Started" target="_blank">use q5 offline</a> or add this to your HTML file to always load the latest version.</p>
+<pre><code class="language-html">&lt;script src="https://q5js.org/q5.js"&gt;&lt;/script&gt;
+</code></pre>
+</md>
+			<md id="md3-3">
+<h2 id="support-q5-💙">Support q5 💙</h2>
+<p>Support the development of q5 on <a href="https://www.patreon.com/c/p5play" target="_blank">Patreon</a> or <a href="https://github.com/sponsors/quinton-ashley" target="_blank">GitHub Sponsors</a>.</p>
+</md>
+		</div>
+	</div>
+
+	<div id="reel4" class="reel">
+		<md id="md4-0">
 <h2 id="more-vibrant-colors-🎨">More vibrant colors! 🎨</h2>
 </md>
 		<div class="minis horiz">
@@ -162,7 +185,7 @@ function windowResized() {
 	resizeCanvas(calcMiniWidth(), 200);
 }
 				</script>
-				<md id="md3-1">
+				<md id="md4-1">
 <p>In p5, bright colors can look dull 😕</p>
 </md>
 			</div>
@@ -199,24 +222,24 @@ function windowResized() {
 	resizeCanvas(calcMiniWidth(), 200);
 }
 			</script>
-				<md id="md3-2">
+				<md id="md4-2">
 <p>q5 empowers artists with <a href="https://github.com/quinton-ashley/q5.js?tab=readme-ov-file#hdr-color-support" target="_blank">HDR color support</a> 🤩</p>
 </md>
 			</div>
 		</div>
 	</div>
-	<div id="reel4" class="reel">
-		<md id="md4-0">
-<h2 id="more-help-for-beginners-✨">More help for beginners ✨</h2>
+	<div id="reel5" class="reel">
+		<md id="md5-0">
+<h2 id="more-help-for-beginners-✨">More help for beginners! ✨</h2>
 <p>Why doesn't this code work? <code>text('Hello!')</code> 🤔</p>
 </md>
 		<div class="minis horiz">
-			<md id="md4-1">
+			<md id="md5-1">
 <p>p5's error messages are often too vague, leaving users searching for help. 🙋</p>
 <pre><code>🌸 p5.js says: [test.js, line 19] text() was expecting at least 3 arguments, but received only 1.
 </code></pre>
 </md>
-			<md id="md4-2">
+			<md id="md5-2">
 <p>Run q5's <code>askAI()</code> before code that isn't working as expected. 🤖</p>
 <pre><code>The `text` function requires the x and y coordinates where the text should be drawn to the canvas.
 
@@ -253,21 +276,7 @@ createCanvas(400, 400);
 </md>
 		</div>
 	</div>
-	<div id="reel11" class="reel">
-		<md id="md11-0">
-<h2 id="no-installation-required-💻">No Installation Required! 💻</h2>
-<p>Start coding with the <a href="https://aijs.io/editor?user=quinton-ashley&amp;project=logoSpin" target="_blank">q5.js template</a> for the <a href="https://aijs.io" target="_blank">Aijs</a> online code editor. 🖌️</p>
-<p>Use q5.js in your own project by adding this line to your HTML file:</p>
-<pre><code class="language-html">&lt;script src="https://q5js.org/q5.js"&gt;&lt;/script&gt;
-</code></pre>
-</md>
-		<md id="md11-1">
-<h2 id="join-our-community-🤝">Join our community 🤝</h2>
-<p>The future of creative coding is here! Join us on the <a href="https://discord.gg/QuxQYwGWuB" target="_blank">q5 community Discord</a>. 🙋</p>
-<p>Support the development of q5 on <a href="https://www.patreon.com/c/p5play" target="_blank">Patreon</a>. 💙</p>
-<p>If you'd like to work on q5, check out our <a href="https://github.com/orgs/q5js/projects/1/views/1" target="_blank">Project Planning Board</a>. 🧑‍💻</p>
-</md>
-	</div>
+
 	<div id="reel20" class="reel">
 		<md id="md20-0">
 <h2 id="credits-🌟">Credits 🌟</h2>
@@ -375,6 +384,21 @@ createCanvas(400, 400);
 	</script>
 	<script src="/home/mie.js"></script>
 	<script src="main.js"></script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
