--- a/learn/index.html
+++ b/learn/index.html
@@ -13,7 +13,7 @@
 	<header>
 		<div class="header-container">
 			<button id="toggleNavButton"></button>
-			<a href="../home">
+			<a id="homeLink" href="../home">
 				<button id="homeButton">
 					<img class="logo" src="/assets/q5js_icon-light.png" alt="">
 					<img class="brand" src="/assets/q5js_brand-light.webp">
